k8s/auburntech/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auburntech
  annotations:
    kubernetes.io/change-cause: "Updated rollout & probes"
  name: auburntech
  namespace: auburntech-dmz
spec:
  selector:
    matchLabels:
      app: auburntech
  strategy:
    type: RollingUpdate
    rollingUpdate:
     maxUnavailable: 0
     maxSurge: 2
  template:
    metadata:
      labels:
        app: auburntech
    spec:
      containers:
        - name: auburntech
          image: public.ecr.aws/b7c8g1g5/linuxeclipsed/php-sns-website:2025.5.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: website-port
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: website-port
            timeoutSeconds: 1
          startupProbe:
            httpGet:
              path: /
              port: website-port
            initialDelaySeconds: 5
            failureThreshold: 30
            periodSeconds: 5
          resources:
            requests:
              cpu: 20m
              memory: 40Mi
            limits:
              cpu: 100m
              memory: 150Mi
          volumeMounts:
            - mountPath: /app
              name: auburntech-data
      volumes:
        - name: auburntech-data
          nfs:
            server: 192.168.2.254
            path: "/mnt/tank/documents/Websites/AuburnTechConsulting"
            readOnly: true
